footer layout change

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -754,6 +754,9 @@ body {
       .menu-list {
         height: auto;
       }
+      .menu-list__link {
+        width: 100%;
+      }
     }
 
   }
